# hangman-game-haskell

./: hangman.cabal
src/: Hangman.hs  Main.hs
test/: tests.hs
