name:                hangman
version:             0.1.0.0
synopsis:            Playing Hangman
-- description:
homepage:            Chris N Julie
license:             BSD3
license-file:        LICENSE
author:              Chris Allen and Julie Moronuki
maintainer:          haskellbook.com
category:            Game
build-type:          Simple
extra-source-files:  data/dict.txt
cabal-version:       >=1.10

library
  exposed-modules:
      Hangman
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , random
    , containers
    , QuickCheck
  default-language: Haskell2010

executable hangman
  main-is:             Main.hs
  hs-source-dirs:      src
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >= 4.7 && < 5
                     , hangman
                     , random
                     , split
                     , containers
                     , QuickCheck
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             tests.hs
  hs-source-dirs:      test
  ghc-options:         -Wall -fno-warn-orphans
  build-depends:       base >= 4.7 && < 5
                     , hangman
                     , random
                     , split
                     , containers
                     , QuickCheck
  default-language:    Haskell2010
